WEBSITE: https://r-ega.net

Changes in version 2.0.5

o ADD: `network.predictability` to predict new data based on a network

o ADD: `network.generalizability` to estimate network generalizability to new data (leverages `network.predictability`)

o UPDATE: `plot.bootEGA` will output `itemStability` plot by default

o UPDATE: `dimensionStability` output now included in `bootEGA` as output `$stability`

o UPDATE: 'rotate' argument added to `infoCluster` plot to allow for different angle of dendrogram

o DEPRECATED: `typicalStructure` and `plot.typicalStructure` have been deprecated to `FALSE`


Changes in version 2.0.4

o FIX: plotting for `infoCluster` when there are grey lines involved (or not)

o FIX: pass of multiple passes of `resolution_parameter` causing an error in {igraph} 2.0.0 for `EGA.fit` (see issue #148)

o ADD: `community.compare` to perform permutation test to determine statistical significance of cluster similarity

o UPDATE: moved `reindex_memberships` to helpers

o UPDATE: `reindex_memberships` used in `community.homogenize`


Changes in version 2.0.3

o FIX: freed `edge.*` arguments in `compare.EGA.plots` to allow full customization

o UPDATE: optimizations for speed and memory in `ergoInfo` and `boot.ergoInfo`

o DEPENDENCY: swapped out {ggdendro} for {dendextend}


Changes in version 2.0.2

o FIX: ties for max gain in `TMFG`

o FIX: continuous variables with few categories that are treated as ordinal in `polychoric.matrix`

o FIX: character input for `structure` is now accepted

o ADD: website pointing to different data check errors added to error output (hopefully, makes errors more understandable)

o UPDATE: `corr = "cor_auto"` now performs `qgraph::cor_auto` in favor of legacy; previous behavior starting at 2.0.0 was to deprecate `"cor_auto"` in favor of `"auto"`; default remains `corr = "auto"`

o UPDATE: `compare.EGA.plots` outputs `$all` and `$individual` for the plots
